welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: value ! is not a member of Boolean
	if (a!=b! && b!=c) return 0
                ^